--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-689.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
-  - {name: 🇺🇸 美国-1.66MB/s(Youtube:不良林), server: emby.metalink.cf, port: 8096, type: vmess, uuid: b8f9b514-4835-493b-e9a0-c135bbeb764b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.71MB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20712, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇩🇪 德国-1.49MB/s(Youtube:不良林), server: 193.108.117.75, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇺🇸 美国-745.2KB/s(Youtube:不良林), server: 152.69.222.253, port: 11188, type: vmess, uuid: 19f2bc05-4012-4528-ba51-9a59f55ec123, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 152.69.222.253}}
-  - {name: 🇺🇸 美国-1.60MB/s(Youtube:不良林), server: 149.57.199.151, port: 30345, type: vmess, uuid: ba771461-5a4a-43f1-a61b-20d48e49e756, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fehc, ws-headers: {Host: 149.57.199.151}}
-  - {name: 🇯🇵 日本-622.9KB/s(Youtube:不良林), server: 168.138.214.114, port: 443, type: vmess, uuid: e35159d7-e8fb-479c-b490-e8e9a924e0c6, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /a9S24DC8US, ws-headers: {Host: 168.138.214.114}}
-  - {name: 🇭🇰 香港-3.12MB/s(Youtube:不良林), server: 20.205.112.252, port: 12059, type: vmess, uuid: 4b6cd9cd-76a5-4a7c-aa8e-e252cf605157, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /dsgdf, ws-headers: {Host: 20.205.112.252}}
-  - {name: 🇺🇸 美国-1.28MB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-695.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇸🇬 新加坡-2.71MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-306.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-452.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-4.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-400.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-666.4KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-689.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.66MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.71MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.49MB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.60MB/s(Youtube:不良林)
-      - 🇯🇵 日本-622.9KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.12MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.28MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
+      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
