--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-2.76MB/s(Youtube:不良林), server: 85.208.108.93, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇦 加拿大-695.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇸🇬 新加坡-2.71MB/s(Youtube:不良林), server: 20.205.233.12, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-228.4KB/s(Youtube:不良林), server: 169.197.141.5, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 51.38.112.84, port: 44, type: ss, cipher: aes-256-cfb, password: instgram.com/openvpnssh}
+  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 196.247.59.154, port: 801, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 167.88.61.175, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-306.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-452.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-4.31MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-400.5KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-666.4KB/s(Youtube:不良林), server: us-05.licom.ml, port: 12501, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-05.licom.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-391.2KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇨🇳 台湾-5.27MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-499.5KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
+  - {name: 🇫🇷 法国-551.9KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.61.175, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇦 加拿大-314.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-2.76MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-695.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1016.7KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-2.71MB/s(Youtube:不良林)
+      - 🇺🇸 美国-228.4KB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-306.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.31MB/s(Youtube:不良林)
-      - 🇩🇪 德国-400.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-666.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-391.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
+      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
