--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇫🇷 法国-1.11MB/s(Youtube:不良林), server: 51.38.112.84, port: 44, type: ss, cipher: aes-256-cfb, password: instgram.com/openvpnssh}
-  - {name: 卢森堡-8.94MB/s(Youtube:不良林), server: 91.243.81.248, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-949.5KB/s(Youtube:不良林), server: 20.106.74.17, port: 23690, type: vmess, uuid: 4928085d-637e-4b9e-e26d-e14627a45c46, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /789k, ws-headers: {Host: 20.106.74.17}}
-  - {name: 🇨🇳 中国-452.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-745.2KB/s(Youtube:不良林), server: 152.69.222.253, port: 11188, type: vmess, uuid: 19f2bc05-4012-4528-ba51-9a59f55ec123, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 152.69.222.253}}
-  - {name: 🇨🇳 台湾-5.27MB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 2ad895a4-90e1-460d-9291-bbfb3463190e, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-762.9KB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇺🇸 美国-667.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: 20.2.71.124, port: 80, type: vmess, uuid: bc4167fa-7394-3869-b9c0-67ae18b40f2f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.2.71.124}}
+  - {name: 挪威-1.01MB/s(Youtube:不良林), server: 51.13.38.115, port: 51611, type: vmess, uuid: 297f4b35-a321-44b9-8a90-2d486d1153c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fed, ws-headers: {Host: 51.13.38.115}}
   - {name: 🇨🇳 中国-499.5KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
-  - {name: 🇫🇷 法国-551.9KB/s(Youtube:不良林), server: 195.154.200.150, port: 2376, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: 167.88.61.175, port: 8888, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇦 加拿大-314.0KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇭🇰 香港-3.98MB/s(Youtube:不良林), server: 20.187.104.109, port: 40940, type: vmess, uuid: 0b97668f-1a7f-4d1e-c26d-70d46c6e5ded, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.187.104.109}}
+  - {name: 🇯🇵 日本-1.04MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
+  - {name: 🇩🇪 德国-1.17MB/s(Youtube:不良林), server: 147.78.243.33, port: 11188, type: vmess, uuid: 98a3a2f6-01ff-48d9-9b24-28de4e4d8cc5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 147.78.243.33}}
+  - {name: 🇨🇦 加拿大-855.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇦 加拿大-682.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇫🇷 法国-1.11MB/s(Youtube:不良林)
-      - 卢森堡-8.94MB/s(Youtube:不良林)
-      - 🇺🇸 美国-949.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-452.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-745.2KB/s(Youtube:不良林)
-      - 🇨🇳 台湾-5.27MB/s(Youtube:不良林)
+      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
+      - 挪威-1.01MB/s(Youtube:不良林)
       - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇫🇷 法国-551.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-314.0KB/s(Youtube:不良林)
+      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
