--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇩🇪 德国-762.9KB/s(Youtube:不良林), server: 193.108.117.75, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-667.2KB/s(Youtube:不良林), server: 167.88.61.175, port: 7307, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇺🇸 美国-5.46MB/s(Youtube:不良林), server: 20.2.71.124, port: 80, type: vmess, uuid: bc4167fa-7394-3869-b9c0-67ae18b40f2f, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.2.71.124}}
-  - {name: 挪威-1.01MB/s(Youtube:不良林), server: 51.13.38.115, port: 51611, type: vmess, uuid: 297f4b35-a321-44b9-8a90-2d486d1153c1, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /fed, ws-headers: {Host: 51.13.38.115}}
-  - {name: 🇨🇳 中国-499.5KB/s(Youtube:不良林), server: hk-hkg-it2-svm-v2.node.inforun.work, port: 13888, type: vmess, uuid: b536533e-6fa0-4575-a1f8-bbf81a194f44, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /je5x3pBN1vez3NQudNkB, ws-headers: {Host: hk-hkg-it2-svm-v2.node.inforun.work}}
-  - {name: 🇭🇰 香港-3.98MB/s(Youtube:不良林), server: 20.187.104.109, port: 40940, type: vmess, uuid: 0b97668f-1a7f-4d1e-c26d-70d46c6e5ded, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 20.187.104.109}}
-  - {name: 🇯🇵 日本-1.04MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇩🇪 德国-1.17MB/s(Youtube:不良林), server: 147.78.243.33, port: 11188, type: vmess, uuid: 98a3a2f6-01ff-48d9-9b24-28de4e4d8cc5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 147.78.243.33}}
+  - {name: 🇨🇦 加拿大-1.87MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-1.56MB/s(Youtube:不良林), server: 168.138.38.51, port: 11188, type: vmess, uuid: 92a8da3c-f87f-4294-b40b-631c8d1d4b3b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hello, ws-headers: {Host: 168.138.38.51}}
+  - {name: 🇨🇦 加拿大-388.7KB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-181.6KB/s(Youtube:不良林), server: emby.metalink.cf, port: 8096, type: vmess, uuid: b8f9b514-4835-493b-e9a0-c135bbeb764b, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-463.0KB/s(Youtube:不良林), server: 167.88.61.175, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇨🇦 加拿大-855.2KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
   - {name: 🇨🇦 加拿大-682.0KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-849.4KB/s(Youtube:不良林), server: 193.108.117.75, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇺🇸 美国-1.20MB/s(Youtube:不良林), server: hd-3.ienai.xin, port: 11000, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-408.4KB/s(Youtube:不良林), server: hd-1.ienai.xin, port: 443, type: vmess, uuid: 03b188df-f7be-4038-8bc3-ffd2edb2b56a, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ienai/ACOT_ddf1dcec-43e8-4e59-ae41-5382e18a7729:878047eae84dfce4b2d895aa7252421f/, ws-headers: {Host: hd-1.ienai.xin}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇩🇪 德国-762.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.46MB/s(Youtube:不良林)
-      - 挪威-1.01MB/s(Youtube:不良林)
-      - 🇨🇳 中国-499.5KB/s(Youtube:不良林)
-      - 🇭🇰 香港-3.98MB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.04MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.87MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.56MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-388.7KB/s(Youtube:不良林)
+      - 🇺🇸 美国-181.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-463.0KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-855.2KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-682.0KB/s(Youtube:不良林)
+      - 🇩🇪 德国-849.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.20MB/s(Youtube:不良林)
+      - 🇺🇸 美国-408.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
